solr配置不成功